--- a/package.json
+++ b/package.json
@@ -1,5 +1,21 @@
 {
   "name": "jump_league",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@babel/preset-react": "^7.10.1",
+    "@rails/webpacker": "5.1.1",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "prop-types": "^15.7.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react_ujs": "^2.6.1"
+  },
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "https://github.com/Seiya-ishikawa/jump_league.git",
+  "author": "Seiya-ishikawa <s.akg1225@softbank.ne.jp>",
+  "license": "MIT",
+  "devDependencies": {
+    "webpack-dev-server": "^3.11.0"
+  }
 }
